@@ -98,6 +98,12 @@ class CreateBuilderImpl implements CreateBuilder, BackgroundOperation<PathAndByt
                 transaction.add(Op.create(fixedPath, data, acling.getAclList(path), createMode), OperationType.CREATE, path);
                 return curatorTransaction;
             }
+
+            @Override
+            public String getProtectedPrefix()
+            {
+                return CreateBuilderImpl.this.getProtectedPrefix();
+            }
         };
     }
 
@@ -178,6 +184,12 @@ class CreateBuilderImpl implements CreateBuilder, BackgroundOperation<PathAndByt
             public String forPath(String path) throws Exception
             {
                 return CreateBuilderImpl.this.forPath(path);
+            }
+
+            @Override
+            public String getProtectedPrefix()
+            {
+                return CreateBuilderImpl.this.getProtectedPrefix();
             }
         };
     }
@@ -314,6 +326,12 @@ class CreateBuilderImpl implements CreateBuilder, BackgroundOperation<PathAndByt
             public String forPath(String path) throws Exception
             {
                 return CreateBuilderImpl.this.forPath(path);
+            }
+
+            @Override
+            public String getProtectedPrefix()
+            {
+                return CreateBuilderImpl.this.getProtectedPrefix();
             }
         };
     }
@@ -462,6 +480,12 @@ class CreateBuilderImpl implements CreateBuilder, BackgroundOperation<PathAndByt
         );
     }
 
+    @Override
+    public String getProtectedPrefix()
+    {
+        return PROTECTED_PREFIX + protectedId + "-";
+    }
+
     private void backgroundCreateParentsThenNode(final OperationAndData<PathAndBytes> mainOperationAndData)
     {
         BackgroundOperation<PathAndBytes>     operation = new BackgroundOperation<PathAndBytes>()
@@ -533,6 +557,12 @@ class CreateBuilderImpl implements CreateBuilder, BackgroundOperation<PathAndByt
                         return CreateBuilderImpl.this.forPath(path);
                     }
                 };
+            }
+
+            @Override
+            public String getProtectedPrefix()
+            {
+                return CreateBuilderImpl.this.getProtectedPrefix();
             }
 
             @Override
@@ -642,7 +672,7 @@ class CreateBuilderImpl implements CreateBuilder, BackgroundOperation<PathAndByt
                 }
             }
         );
-        
+
         trace.commit();
         return returnPath;
     }
@@ -706,10 +736,5 @@ class CreateBuilderImpl implements CreateBuilder, BackgroundOperation<PathAndByt
             path = ZKPaths.makePath(pathAndNode.getPath(), name);
         }
         return path;
-    }
-
-    private String getProtectedPrefix() throws Exception
-    {
-        return PROTECTED_PREFIX + protectedId + "-";
     }
 }
